# tca-habits

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  vibe.md
.claude/: settings.json
.claude/agents/: reviewer.md  test-writer.md  verifier.md
.claude/commands/: add-feature.md
.claude/hooks/: guard_streak.py
.codex/: hooks.json
.codex/agents/: reviewer.toml  test-writer.toml  verifier.toml
.codex/hooks/: guard_streak.py
.codex/prompts/: add-feature.md
.github/workflows/: ci.yml
backend/: ai.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/tests/: conftest.py  test_api.py  test_features.py  test_streak_logic.py
docs/: TCA-Vibe-Coding.pptx  TCA-notes.docx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AddHabitModal.tsx  BottomNav.tsx  HabitDetailModal.tsx  HabitTile.tsx  Header.tsx  Modal.tsx  ProgressRing.tsx  StatsView.tsx  ThemeToggle.tsx
frontend/src/lib/: colors.ts  theme.ts
scripts/: backend.sh  dev.sh  frontend.sh  setup.sh
